# anjuta

./: configure.ac
libanjuta/: anjuta-environment-editor.c  anjuta-environment-editor.h  anjuta-language-provider.c  anjuta-language-provider.h  anjuta-plugin-manager.c  anjuta-plugin.c  anjuta-plugin.h  anjuta-preferences.c  anjuta-preferences.h  anjuta-session.c  anjuta-session.h  anjuta-shell.c  anjuta-shell.h  anjuta-utils.c  anjuta-utils.h
libanjuta/interfaces/: libanjuta.idl
plugins/build-basic-autotools/: Makefile.am  build-options.c  build-options.h  build.c  build.session.gschema.xml  plugin.c  plugin.h
plugins/class-gen/: plugin.c
plugins/cvs-plugin/: plugin.c
plugins/debug-manager/: Makefile.am  breakpoints.c  breakpoints.h  debugger.session.gschema.xml.in  plugin.c  start.c  start.h  variable.c  variable.h  watch.c  watch.h
plugins/devhelp/: Makefile.am  anjuta-devhelp-settings.ui  devhelp-books-chooser.c  devhelp-books-chooser.h  devhelp-provider.c  devhelp-provider.h  org.gnome.anjuta.plugins.devhelp.gschema.xml.in  plugin.c  plugin.h
plugins/document-manager/: Makefile.am  anjuta-bookmarks.c  anjuta-docman.c  anjuta-docman.h  document-manager.session.gschema.xml  plugin.c  search-box.c
plugins/file-loader/: Makefile.am  file-loader.gschema.xml  plugin.c
plugins/file-manager/: file-manager.ui  file-view.c  org.gnome.anjuta.file-manager.gschema.xml.in  plugin.c
plugins/gdb/: Makefile.am  gdb.session.gschema.xml  plugin.c  preferences.c
src/: Makefile.am  anjuta-application.c  anjuta-window.c  anjuta-window.h  anjuta.session.gschema.xml
(+58 files in other folders)
